# computer-graphics-XJTU

./: CMakeLists.txt  camera.cpp  modifications.cpp  object.cpp  rasterizer.cpp  shader.cpp  spdlog.cpp
lab1/: CMakeLists.txt
lab1/.cache/clangd/index/: 1.1.cpp.345F4FDBB20A8A20.idx  AlignedBox.h.9BA22B871A149116.idx  AngleAxis.h.19A70F1BC06BFDA3.idx  ArithmeticSequence.h.2B8EBC661BBA7130.idx  Array.h.9F29719494A56103.idx  ArrayBase.h.E6B90663D180DC07.idx  ArrayCwiseBinaryOps.h.E7715DDFEF173087.idx  ArrayCwiseUnaryOps.h.675AEC35CB94D85E.idx  ArrayWrapper.h.1054B71BC1ED975D.idx  Assign.h.F0BC4CA2319B036A.idx  AssignEvaluator.h.8870BE63E231D4DE.idx  AssignmentFunctors.h.4816865A4B968E28.idx  BDCSVD.h.821F36AFE5920123.idx  BFloat16.h.DD545D9141C8E10A.idx  BandMatrix.h.C5A9280D7F96682B.idx  BinaryFunctors.h.F0C87ED2F99224AA.idx  BlasUtil.h.512C076C1B8B4C33.idx  Block.h.9D21ED1A66627055.idx  BlockHouseholder.h.09EC5C152C5318E7.idx  BlockMethods.h.A2589DD84FA36E1D.idx  BooleanRedux.h.DD91CE611FB62DB9.idx  Cholesky.83B24FE6F5B8ECEE.idx  ColPivHouseholderQR.h.67C41316A21E2BF6.idx  CommaInitializer.h.76EA58403780B916.idx  CommonCwiseBinaryOps.h.F8742C7CAA51F5BF.idx  CommonCwiseUnaryOps.h.28183EE3CB661C32.idx  CompleteOrthogonalDecomposition.h.26FD8A9A3874D869.idx  Complex.h.2F5919F3EC84B087.idx  ComplexEigenSolver.h.81186F90C862AE5F.idx  ComplexSchur.h.D824DE12166587E8.idx  ConditionEstimator.h.74CE1EDDF8BEDDAA.idx  ConfigureVectorization.h.A4C2AAAEAE841C1F.idx  ConjHelper.h.B378B734C650F8E2.idx  Constants.h.17C920FEFCA139AB.idx  (+200 more)
lab1/include/: funcs.hpp
lab1/src/: main.cpp
(+15 files in other folders)
